fixed spacing problem

--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ nav {
 }
 
 .main-container {
-  padding: 2em;
+  padding: 3em 1em;
   margin: 0 auto;
   display:flex;
   flex-direction: row;
@@ -292,7 +292,7 @@ nav {
   .personal-info {
     align-items: center;
     align-self: center;
-    margin-left: 2em;
+    margin-left: 0;
     margin-top: 1.5em;
   }
 
@@ -464,6 +464,12 @@ nav {
 
   #main {
     margin-left: 0;
+  }
+
+  .personal-info {
+
+    margin-left: 2em;
+
   }
 
 }
